feat: 모든 플레이어가 사다리 타는 기능 추가